# pants-monorepo-example

./: .gitignore  README.md  pants.toml
apps/example-app-1/: BUILD  main.py  pyproject.toml
apps/example-app-2/: BUILD  main.py  pyproject.toml
libs/example-lib-core/: BUILD  pyproject.toml
libs/example-lib-core/example_lib_core/: schema.py
libs/example-lib-extended/: BUILD  pyproject.toml
libs/example-lib-extended/example_lib_extended/: schema.py
