[tool.poetry]
name = "example-app-1"
version = "0.1.0"
description = ""
authors = ["Valentin Kuznetsov <aimestereo@gmail.com>"]
packages = [{include = "example_app_1"}]

[tool.poetry.dependencies]
python = "^3.10"
example-lib-core = {path = "../../libs/example-lib-core", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
