[tool.poetry]
name = "example-app-2"
version = "0.1.0"
description = ""
authors = ["Valentin Kuznetsov <aimestereo@gmail.com>"]
packages = [{include = "example_app_2"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.0"
example-lib-extended = {path = "../../libs/example-lib-extended", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
