[tool.poetry]
name = "example-lib-core"
version = "0.1.0"
description = ""
authors = ["Valentin Kuznetsov <aimestereo@gmail.com>"]
packages = [{include = "example_lib_core"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
