[tool.poetry]
name = "example-lib-extended"
version = "0.1.0"
description = ""
authors = ["Valentin Kuznetsov <aimestereo@gmail.com>"]
packages = [{include = "example_lib_extended"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.0"
example-lib-core = {path = "../example-lib-core", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
